<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_mode_title">%1$d Selected</string>
    <string name="activity_subtitle_discussion_members">Members: %1$s</string>
    <string name="activity_title_contact_details">Contact Details</string>
    <string name="activity_title_create_group">Create Group</string>
    <string name="activity_title_create_identity">New ID Creation</string>
    <string name="activity_title_discussion_settings">Discussion Settings</string>
    <string name="activity_title_group_details">Group Details</string>
    <string name="activity_title_message_details">Message Details</string>
    <string name="activity_title_myid">My Id</string>
    <string name="activity_title_settings">Olvid Settings</string>
    <string name="app_name">Olvid</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="button_label_abort">Abort</string>
    <string name="button_label_accept">Accept</string>
    <string name="button_label_app_settings">App Settings</string>
    <string name="button_label_backup">Backup</string>
    <string name="button_label_battery_optimization_settings">Settings</string>
    <string name="button_label_cancel">Cancel</string>
    <string name="button_label_clear">Clear</string>
    <string name="button_label_create_group">Create Group</string>
    <string name="button_label_discard">Discard</string>
    <string name="button_label_enter_manually">Enter Manually</string>
    <string name="button_label_exchange_digits_with_user">Exchange codes with %1$s</string>
    <string name="button_label_generate_new_id">Generate new ID</string>
    <string name="button_label_go_to_contact">Go to contact</string>
    <string name="button_label_go_to_discussion">Go to discussion</string>
    <string name="button_label_ignore">Ignore</string>
    <string name="button_label_import_from_clipboard">Import from Clipboard</string>
    <string name="button_label_introduce">Introduce</string>
    <string name="button_label_invite">Send invite</string>
    <string name="button_label_invite_members">"Invite
members"</string>
    <string name="button_label_invite_user">Invite %1$s</string>
    <string name="button_label_next">Next</string>
    <string name="button_label_ok">OK</string>
    <string name="button_label_previous">Previous</string>
    <string name="button_label_proceed">Proceed</string>
    <string name="button_label_publish">Publish</string>
    <string name="button_label_remove_members">"Remove
members"</string>
    <string name="button_label_remove_nickname">Reset</string>
    <string name="button_label_scan_qr_code">Scan QR Code</string>
    <string name="button_label_share">Share</string>
    <string name="button_label_transfer">Transfer</string>
    <string name="button_label_update">Update</string>
    <string name="button_label_validate">Validate</string>
    <string name="button_more">More…</string>
    <string name="button_restart_channel_establishment">Restart Channel Establishment</string>
    <string name="button_scan_qr_code">"Scan another user's QR Code"</string>
    <string name="button_send_invite">Send invitation</string>
    <string name="button_show_qr">Show my QR code</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="content_description_code_valid">Code valid</string>
    <string name="content_description_edit_my_name">Edit my name</string>
    <string name="content_description_message_status">Message status</string>
    <string name="content_description_qr_code">QR code</string>
    <string name="content_description_send_message">Send message</string>
    <string name="copy">Copy</string>
    <string name="default_web_client_id">1084854001073-qcgl7q3a3hq0bfe0jtsf6c8bupcpb69n.apps.googleusercontent.com</string>
    <string name="dialog_message_abort_group_invitation">You are about to abort the ongoing group creation protocol for group %1$s. You will leave this group and no longer receive the messages posted in it. Really abort the protocol?</string>
    <string name="dialog_message_abort_invitation">You are about to discard an invitation. Proceed?</string>
    <string name="dialog_message_about_olvid">"You are using Olvid for Android
Version %1$s (build %2$d)

Server API: %3$s
Engine DB schema: %4$d
Application DB schema: %5$d"</string>
    <string name="dialog_message_background_restricted">"It appears that the Olvid app has Background Restriction enabled. Olvid will not be able to function properly until you remove it from the Restricted Apps list.

You can access this settings from:
App Settings > Advanced > Battery > Background restriction"</string>
    <string name="dialog_message_battery_optimization">"Battery optimization on Android works by delaying certain background events to run them in a batch. This may delay the reception of inbound Olvid messages.

To ensure that your messages are received promptly, you may disable Battery Optimization for specific apps. We recommend disabling Battery Optimization by visiting the settings below and adding Olvid to the list of Power-saving exceptions."</string>
    <string name="dialog_message_configuration_and_identity_mismatch">"The server URL in the configuration you imported does not match the server in your ID.

Unable to update your API Key."</string>
    <string name="dialog_message_contact_introduction">Do you want to introduce %1$s and %2$s to one another?</string>
    <string name="dialog_message_delete_attachment">"Do you really want to delete attachment %1$s from this message?
This action cannot be undone."</string>
    <string name="dialog_title_add_contact_method">Choose how to add a contact</string>
    <string name="dialog_title_api_key_status">API Key Status</string>
    <string name="explanation_configuration_api_key">"Before using Olvid, you must generate an ID and register it with the Olvid server.

Your administrator should have sent you a configuration link. Either click this link to import the configuration into Olvid or use one of the methods below."</string>
    <string name="hint_api_key">xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx</string>
    <string name="hint_server_url">https://server.olvid.io</string>
    <string name="label_api_key">API Key</string>
    <string name="label_group_members">Group Members</string>
    <string name="label_server_url">Server</string>
    <string name="message_invalid_api_key_format">Invalid API key format</string>
    <string name="message_valid_api_key_format">Valid API key format</string>
    <string name="pref_autodownload_size_summary">%1$s</string>
    <string name="pref_autodownload_size_title">Automatically download attachments…</string>
    <string name="pref_key_autodownload_size">pref_key_autodownload_size</string>
    <string name="pref_key_qr_correction_level">pref_key_qr_correction_level</string>
    <string name="pref_key_send_read_receipt">pref_key_send_read_receipt</string>
    <string name="pref_key_use_vibrator">pref_key_use_vibrator</string>
    <string name="pref_qr_correction_level_summary">%1$s</string>
    <string name="pref_qr_correction_level_title">QR-code error correction level</string>
    <string name="pref_read_receipt_summary">When this is on, people are notified when you have read their messages. This can be overridden in each discussion.</string>
    <string name="pref_read_receipt_title">Send read receipts</string>
    <string name="pref_vibrator_off_summary">Never vibrate</string>
    <string name="pref_vibrator_on_summary">Vibrate when receiving an invitation or a message</string>
    <string name="pref_vibrator_title">Use vibrator</string>
</resources>