<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <SwitchPreference android:icon="@drawable/ic_pref_vibrator" android:title="@string/pref_vibrator_title" android:key="@string/pref_key_use_vibrator" android:order="10" android:defaultValue="true" android:summaryOn="@string/pref_vibrator_on_summary" android:summaryOff="@string/pref_vibrator_off_summary" />
    <SwitchPreference android:icon="@drawable/ic_pref_read_receipt" android:title="@string/pref_read_receipt_title" android:key="@string/pref_key_send_read_receipt" android:summary="@string/pref_read_receipt_summary" android:order="20" android:defaultValue="false" />
    <ListPreference android:icon="@drawable/ic_pref_download" android:entries="@array/autodownload_sizes" android:title="@string/pref_autodownload_size_title" android:key="@string/pref_key_autodownload_size" android:summary="@string/pref_autodownload_size_summary" android:order="30" android:defaultValue="10000000" android:entryValues="@array/autodownload_sizes_values" />
    <ListPreference android:icon="@drawable/ic_pref_qr" android:entries="@array/QR_correction_levels" android:title="@string/pref_qr_correction_level_title" android:key="@string/pref_key_qr_correction_level" android:summary="@string/pref_qr_correction_level_summary" android:order="100" android:defaultValue="M" android:entryValues="@array/QR_correction_levels_values" />
</PreferenceScreen>