<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="8.0dip" app:cardBackgroundColor="@color/almostWhite" app:cardCornerRadius="4.0dip" app:cardElevation="4.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:animateLayoutChanges="true">
        <include android:layout_width="fill_parent" android:layout_height="wrap_content" layout="@layout/view_invitation_header" />
        <LinearLayout android:orientation="vertical" android:id="@id/group_members_group" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="16.0sp" android:textColor="@color/primary700" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/label_group_members" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" />
            <TextView android:textColorLink="@color/primary700" android:id="@id/group_members_text_view" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" />
        </LinearLayout>
        <LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:baselineAligned="false">
            <LinearLayout android:gravity="end" android:orientation="horizontal" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
                <Button android:id="@id/button_go_to" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/button_label_go_to_discussion" style="@style/Base.Widget.AppCompat.Button.Borderless.Colored" />
                <Button android:id="@id/button_ok" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/button_label_ok" style="@style/Base.Widget.AppCompat.Button.Borderless.Colored" />
                <Button android:id="@id/button_ignore" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/button_label_ignore" style="@style/Base.Widget.AppCompat.Button.Borderless.Colored" />
                <Button android:id="@id/button_accept" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/button_label_accept" style="@style/Base.Widget.AppCompat.Button.Borderless.Colored" />
                <Button android:id="@id/button_abort" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/button_label_abort" style="@style/Base.Widget.AppCompat.Button.Borderless.Colored" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>