<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textStyle="italic" android:id="@id/identity_configuration_explanation" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/explanation_configuration_api_key" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" app:layout_constraintBottom_toTopOf="@id/linearLayout2" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_chainStyle="packed" />
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/linearLayout2" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginBottom="32.0dip" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" app:layout_constraintBottom_toTopOf="@id/linearLayout3" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/identity_configuration_explanation">
            <Button android:id="@id/button_scan_qr_code" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/button_label_scan_qr_code" android:layout_weight="1.0" style="@style/Widget.AppCompat.Button.Colored" />
            <Button android:id="@id/button_import_from_clipboard" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/button_label_import_from_clipboard" android:layout_weight="1.0" style="@style/Widget.AppCompat.Button.Colored" />
            <Button android:id="@id/button_enter_manually" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/button_label_enter_manually" android:layout_weight="1.0" style="@style/Widget.AppCompat.Button.Colored" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@id/linearLayout3" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginBottom="80.0dip" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/linearLayout2" app:layout_constraintWidth_max="wrap">
            <LinearLayout android:gravity="end" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginEnd="8.0dip">
                <TextView android:textStyle="bold" android:textColor="@color/primary700" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="4.0dip" android:text="@string/label_server_url" android:singleLine="true" />
                <TextView android:textStyle="bold" android:textColor="@color/primary700" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_api_key" android:singleLine="true" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:textSize="12.0sp" android:typeface="monospace" android:textColor="@color/primary700" android:ellipsize="end" android:id="@id/identity_server_textview" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0sp" android:layout_marginBottom="4.0dip" android:hint="@string/hint_server_url" android:singleLine="true" />
                <TextView android:textSize="12.0sp" android:typeface="monospace" android:textColor="@color/primary700" android:id="@id/identity_api_key_textview" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0sp" android:hint="@string/hint_api_key" android:singleLine="true" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/identity_configuration_valid_api_key" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/linearLayout3">
            <ImageView android:layout_width="16.0dip" android:layout_height="16.0dip" android:layout_weight="0.0" app:srcCompat="@drawable/ic_accept" />
            <TextView android:textColor="@color/green" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/message_valid_api_key_format" android:layout_weight="0.0" android:layout_marginStart="8.0dip" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/identity_configuration_invalid_api_key" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/linearLayout3">
            <ImageView android:layout_width="16.0dip" android:layout_height="16.0dip" android:layout_weight="0.0" app:srcCompat="@drawable/ic_reject" />
            <TextView android:textColor="@color/red" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/message_invalid_api_key_format" android:layout_weight="0.0" android:layout_marginStart="8.0dip" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>