<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:theme="@style/PrimaryRipple" android:orientation="vertical" android:background="@color/almostWhite" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textAppearance="@style/RobotoMedium" android:textSize="18.0sp" android:textColor="@color/almostWhite" android:gravity="center_vertical" android:background="@color/primary900" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/dialog_title_add_contact_method" android:paddingStart="16.0dip" android:paddingEnd="16.0dip" />
    <TextView android:textSize="16.0sp" android:gravity="center" android:id="@id/send_invite_button" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="56.0dip" android:foreground="?selectableItemBackground" android:text="@string/button_send_invite" />
    <View android:background="@color/lightGrey" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <TextView android:textSize="16.0sp" android:gravity="center" android:id="@id/scan_qr_code_button" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="56.0dip" android:foreground="?selectableItemBackground" android:text="@string/button_scan_qr_code" />
    <View android:background="@color/lightGrey" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="56.0dip">
        <TextView android:textSize="16.0sp" android:gravity="center" android:id="@id/show_qr_button" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="56.0dip" android:foreground="?selectableItemBackground" android:text="@string/button_show_qr" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <ImageView android:id="@id/qr_code_image_view" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_marginTop="8.0dip" android:layout_marginBottom="8.0dip" android:foreground="@drawable/overlay_qr_code_small" android:foregroundGravity="center" android:layout_marginEnd="8.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintDimensionRatio="1:1" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <View android:background="@color/lightGrey" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <TextView android:textSize="16.0sp" android:gravity="center" android:id="@id/more_button" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="56.0dip" android:foreground="?selectableItemBackground" android:text="@string/button_more" />
</LinearLayout>